[tool.poetry]
name = "towhere-server"
version = "0.1.0"
description = ""
authors = ["Hyunwook Nam <hw0knam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.85.0"
pydantic = "1.10.2"
starlette = "0.20.4"
typing-extensions = "4.3.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.18.3"
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
